Recover a loop-carrying finally split around a nested catch